y.output
Terminals unused in grammar

   TYPE
   COMPARE
   PREPRO
   MAIN
   STRUCT


State 30 conflicts: 1 shift/reduce
State 42 conflicts: 1 shift/reduce
State 70 conflicts: 1 shift/reduce
State 76 conflicts: 1 shift/reduce
State 120 conflicts: 1 shift/reduce
State 137 conflicts: 1 shift/reduce
State 138 conflicts: 1 shift/reduce
State 146 conflicts: 1 shift/reduce
State 147 conflicts: 1 shift/reduce


Grammar

    0 $accept: ED $end

    1 ED: program

    2 program: declarationlist

    3 declarationlist: declarationlist declaration
    4                | declaration

    5 declaration: vardeclaration
    6            | fundeclaration

    7 vardeclaration: typespecifier vardeclist

    8 scopedvardeclaration: scopedtypespecifier vardeclist

    9 vardeclist: vardeclist ',' vardecinitialize
   10           | vardecinitialize

   11 vardecinitialize: vardecid

   12 vardecid: ID
   13         | ID '[' NUM ']'

   14 scopedtypespecifier: STATIC typespecifier
   15                    | typespecifier

   16 typespecifier: returntypespecifier

   17 returntypespecifier: INT
   18                    | FLOAT
   19                    | CHAR

   20 fundeclaration: typespecifier ID '(' params ')' statement
   21               | ID '(' params ')' statement

   22 params: paramlist
   23       | %empty

   24 paramlist: paramlist ';' paramtypelist
   25          | paramtypelist

   26 paramtypelist: typespecifier paramidlist

   27 paramidlist: paramidlist ',' paramid
   28            | paramid

   29 paramid: ID
   30        | ID '[' ']'

   31 statement: expressionst
   32          | compoundst
   33          | selectionst
   34          | iterationst
   35          | returnst
   36          | breakst

   37 compoundst: CO localdeclarations statementlist CC

   38 localdeclarations: localdeclarations scopedvardeclaration
   39                  | %empty

   40 statementlist: statementlist statement
   41              | %empty

   42 expressionst: expression ';'
   43             | ';'

   44 selectionst: IF '(' simpleexpression ')' statement
   45            | IF '(' simpleexpression ')' statement ELSE statement

   46 iterationst: WHILE '(' simpleexpression ')' statement

   47 returnst: RETURN ';'
   48         | RETURN expression ';'

   49 breakst: STATEKW ';'

   50 expression: mutable '=' expression
   51           | mutable UNARYOP
   52           | simpleexpression

   53 simpleexpression: simpleexpression OR andexpression
   54                 | andexpression

   55 andexpression: andexpression AND unaryrelexpression
   56              | unaryrelexpression

   57 unaryrelexpression: '!' unaryrelexpression
   58                   | %empty
   59                   | relexpression

   60 relexpression: sumexpression relop sumexpression
   61              | sumexpression

   62 relop: '<' '>'
   63      | '<' '='
   64      | '>' '='
   65      | '=' '='
   66      | '!' '='

   67 sumexpression: sumexpression sumop term
   68              | term

   69 sumop: '+'
   70      | '-'

   71 term: term mulop unaryexpression
   72     | unaryexpression

   73 mulop: '/'
   74      | '*'
   75      | '%'

   76 unaryexpression: unaryop unaryexpression
   77                | factor

   78 unaryop: '-'
   79        | '*'
   80        | '?'

   81 factor: mutable
   82       | immutable

   83 mutable: ID
   84        | mutable '[' expression ']'
   85        | mutable '.' ID

   86 immutable: '(' expression ')'
   87          | call
   88          | constant

   89 call: ID '(' args ')'

   90 args: arglist

   91 arglist: arglist ',' expression
   92        | expression

   93 constant: NUM
   94         | CHARCONST
   95         | STRING


Terminals, with rules where they appear

$end (0) 0
'!' (33) 57 66
'%' (37) 75
'(' (40) 20 21 44 45 46 86 89
')' (41) 20 21 44 45 46 86 89
'*' (42) 74 79
'+' (43) 69
',' (44) 9 27 91
'-' (45) 70 78
'.' (46) 85
'/' (47) 73
';' (59) 24 42 43 47 48 49
'<' (60) 62 63
'=' (61) 50 63 64 65 66
'>' (62) 62 64
'?' (63) 80
'[' (91) 13 30 84
']' (93) 13 30 84
error (256)
ID (258) 12 13 20 21 29 30 83 85 89
NUM (259) 13 93
WHILE (260) 46
TYPE (261)
CHARCONST (262) 94
COMPARE (263)
PREPRO (264)
MAIN (265)
INT (266) 17
RETURN (267) 47 48
IF (268) 44 45
ELSE (269) 45
STRUCT (270)
UNARYOP (271) 51
STATEKW (272) 49
STRING (273) 95
CC (274) 37
CO (275) 37
FLOAT (276) 18
CHAR (277) 19
STATIC (278) 14
AND (279) 55
OR (280) 53


Nonterminals, with rules where they appear

$accept (43)
    on left: 0
ED (44)
    on left: 1, on right: 0
program (45)
    on left: 2, on right: 1
declarationlist (46)
    on left: 3 4, on right: 2 3
declaration (47)
    on left: 5 6, on right: 3 4
vardeclaration (48)
    on left: 7, on right: 5
scopedvardeclaration (49)
    on left: 8, on right: 38
vardeclist (50)
    on left: 9 10, on right: 7 8 9
vardecinitialize (51)
    on left: 11, on right: 9 10
vardecid (52)
    on left: 12 13, on right: 11
scopedtypespecifier (53)
    on left: 14 15, on right: 8
typespecifier (54)
    on left: 16, on right: 7 14 15 20 26
returntypespecifier (55)
    on left: 17 18 19, on right: 16
fundeclaration (56)
    on left: 20 21, on right: 6
params (57)
    on left: 22 23, on right: 20 21
paramlist (58)
    on left: 24 25, on right: 22 24
paramtypelist (59)
    on left: 26, on right: 24 25
paramidlist (60)
    on left: 27 28, on right: 26 27
paramid (61)
    on left: 29 30, on right: 27 28
statement (62)
    on left: 31 32 33 34 35 36, on right: 20 21 40 44 45 46
compoundst (63)
    on left: 37, on right: 32
localdeclarations (64)
    on left: 38 39, on right: 37 38
statementlist (65)
    on left: 40 41, on right: 37 40
expressionst (66)
    on left: 42 43, on right: 31
selectionst (67)
    on left: 44 45, on right: 33
iterationst (68)
    on left: 46, on right: 34
returnst (69)
    on left: 47 48, on right: 35
breakst (70)
    on left: 49, on right: 36
expression (71)
    on left: 50 51 52, on right: 42 48 50 84 86 91 92
simpleexpression (72)
    on left: 53 54, on right: 44 45 46 52 53
andexpression (73)
    on left: 55 56, on right: 53 54 55
unaryrelexpression (74)
    on left: 57 58 59, on right: 55 56 57
relexpression (75)
    on left: 60 61, on right: 59
relop (76)
    on left: 62 63 64 65 66, on right: 60
sumexpression (77)
    on left: 67 68, on right: 60 61 67
sumop (78)
    on left: 69 70, on right: 67
term (79)
    on left: 71 72, on right: 67 68 71
mulop (80)
    on left: 73 74 75, on right: 71
unaryexpression (81)
    on left: 76 77, on right: 71 72 76
unaryop (82)
    on left: 78 79 80, on right: 76
factor (83)
    on left: 81 82, on right: 77
mutable (84)
    on left: 83 84 85, on right: 50 51 81 84 85
immutable (85)
    on left: 86 87 88, on right: 82
call (86)
    on left: 89, on right: 87
args (87)
    on left: 90, on right: 89
arglist (88)
    on left: 91 92, on right: 90 91
constant (89)
    on left: 93 94 95, on right: 88


State 0

    0 $accept: . ED $end

    ID     shift, and go to state 1
    INT    shift, and go to state 2
    FLOAT  shift, and go to state 3
    CHAR   shift, and go to state 4

    ED                   go to state 5
    program              go to state 6
    declarationlist      go to state 7
    declaration          go to state 8
    vardeclaration       go to state 9
    typespecifier        go to state 10
    returntypespecifier  go to state 11
    fundeclaration       go to state 12


State 1

   21 fundeclaration: ID . '(' params ')' statement

    '('  shift, and go to state 13


State 2

   17 returntypespecifier: INT .

    $default  reduce using rule 17 (returntypespecifier)


State 3

   18 returntypespecifier: FLOAT .

    $default  reduce using rule 18 (returntypespecifier)


State 4

   19 returntypespecifier: CHAR .

    $default  reduce using rule 19 (returntypespecifier)


State 5

    0 $accept: ED . $end

    $end  shift, and go to state 14


State 6

    1 ED: program .

    $default  reduce using rule 1 (ED)


State 7

    2 program: declarationlist .
    3 declarationlist: declarationlist . declaration

    ID     shift, and go to state 1
    INT    shift, and go to state 2
    FLOAT  shift, and go to state 3
    CHAR   shift, and go to state 4

    $default  reduce using rule 2 (program)

    declaration          go to state 15
    vardeclaration       go to state 9
    typespecifier        go to state 10
    returntypespecifier  go to state 11
    fundeclaration       go to state 12


State 8

    4 declarationlist: declaration .

    $default  reduce using rule 4 (declarationlist)


State 9

    5 declaration: vardeclaration .

    $default  reduce using rule 5 (declaration)


State 10

    7 vardeclaration: typespecifier . vardeclist
   20 fundeclaration: typespecifier . ID '(' params ')' statement

    ID  shift, and go to state 16

    vardeclist        go to state 17
    vardecinitialize  go to state 18
    vardecid          go to state 19


State 11

   16 typespecifier: returntypespecifier .

    $default  reduce using rule 16 (typespecifier)


State 12

    6 declaration: fundeclaration .

    $default  reduce using rule 6 (declaration)


State 13

   21 fundeclaration: ID '(' . params ')' statement

    INT    shift, and go to state 2
    FLOAT  shift, and go to state 3
    CHAR   shift, and go to state 4

    $default  reduce using rule 23 (params)

    typespecifier        go to state 20
    returntypespecifier  go to state 11
    params               go to state 21
    paramlist            go to state 22
    paramtypelist        go to state 23


State 14

    0 $accept: ED $end .

    $default  accept


State 15

    3 declarationlist: declarationlist declaration .

    $default  reduce using rule 3 (declarationlist)


State 16

   12 vardecid: ID .
   13         | ID . '[' NUM ']'
   20 fundeclaration: typespecifier ID . '(' params ')' statement

    '['  shift, and go to state 24
    '('  shift, and go to state 25

    $default  reduce using rule 12 (vardecid)


State 17

    7 vardeclaration: typespecifier vardeclist .
    9 vardeclist: vardeclist . ',' vardecinitialize

    ','  shift, and go to state 26

    $default  reduce using rule 7 (vardeclaration)


State 18

   10 vardeclist: vardecinitialize .

    $default  reduce using rule 10 (vardeclist)


State 19

   11 vardecinitialize: vardecid .

    $default  reduce using rule 11 (vardecinitialize)


State 20

   26 paramtypelist: typespecifier . paramidlist

    ID  shift, and go to state 27

    paramidlist  go to state 28
    paramid      go to state 29


State 21

   21 fundeclaration: ID '(' params . ')' statement

    ')'  shift, and go to state 30


State 22

   22 params: paramlist .
   24 paramlist: paramlist . ';' paramtypelist

    ';'  shift, and go to state 31

    $default  reduce using rule 22 (params)


State 23

   25 paramlist: paramtypelist .

    $default  reduce using rule 25 (paramlist)


State 24

   13 vardecid: ID '[' . NUM ']'

    NUM  shift, and go to state 32


State 25

   20 fundeclaration: typespecifier ID '(' . params ')' statement

    INT    shift, and go to state 2
    FLOAT  shift, and go to state 3
    CHAR   shift, and go to state 4

    $default  reduce using rule 23 (params)

    typespecifier        go to state 20
    returntypespecifier  go to state 11
    params               go to state 33
    paramlist            go to state 22
    paramtypelist        go to state 23


State 26

    9 vardeclist: vardeclist ',' . vardecinitialize

    ID  shift, and go to state 34

    vardecinitialize  go to state 35
    vardecid          go to state 19


State 27

   29 paramid: ID .
   30        | ID . '[' ']'

    '['  shift, and go to state 36

    $default  reduce using rule 29 (paramid)


State 28

   26 paramtypelist: typespecifier paramidlist .
   27 paramidlist: paramidlist . ',' paramid

    ','  shift, and go to state 37

    $default  reduce using rule 26 (paramtypelist)


State 29

   28 paramidlist: paramid .

    $default  reduce using rule 28 (paramidlist)


State 30

   21 fundeclaration: ID '(' params ')' . statement

    ID         shift, and go to state 38
    NUM        shift, and go to state 39
    WHILE      shift, and go to state 40
    CHARCONST  shift, and go to state 41
    RETURN     shift, and go to state 42
    IF         shift, and go to state 43
    STATEKW    shift, and go to state 44
    STRING     shift, and go to state 45
    CO         shift, and go to state 46
    '-'        shift, and go to state 47
    '*'        shift, and go to state 48
    '('        shift, and go to state 49
    ';'        shift, and go to state 50
    '!'        shift, and go to state 51
    '?'        shift, and go to state 52

    ';'       [reduce using rule 58 (unaryrelexpression)]
    $default  reduce using rule 58 (unaryrelexpression)

    statement           go to state 53
    compoundst          go to state 54
    expressionst        go to state 55
    selectionst         go to state 56
    iterationst         go to state 57
    returnst            go to state 58
    breakst             go to state 59
    expression          go to state 60
    simpleexpression    go to state 61
    andexpression       go to state 62
    unaryrelexpression  go to state 63
    relexpression       go to state 64
    sumexpression       go to state 65
    term                go to state 66
    unaryexpression     go to state 67
    unaryop             go to state 68
    factor              go to state 69
    mutable             go to state 70
    immutable           go to state 71
    call                go to state 72
    constant            go to state 73


State 31

   24 paramlist: paramlist ';' . paramtypelist

    INT    shift, and go to state 2
    FLOAT  shift, and go to state 3
    CHAR   shift, and go to state 4

    typespecifier        go to state 20
    returntypespecifier  go to state 11
    paramtypelist        go to state 74


State 32

   13 vardecid: ID '[' NUM . ']'

    ']'  shift, and go to state 75


State 33

   20 fundeclaration: typespecifier ID '(' params . ')' statement

    ')'  shift, and go to state 76


State 34

   12 vardecid: ID .
   13         | ID . '[' NUM ']'

    '['  shift, and go to state 24

    $default  reduce using rule 12 (vardecid)


State 35

    9 vardeclist: vardeclist ',' vardecinitialize .

    $default  reduce using rule 9 (vardeclist)


State 36

   30 paramid: ID '[' . ']'

    ']'  shift, and go to state 77


State 37

   27 paramidlist: paramidlist ',' . paramid

    ID  shift, and go to state 27

    paramid  go to state 78


State 38

   83 mutable: ID .
   89 call: ID . '(' args ')'

    '('  shift, and go to state 79

    $default  reduce using rule 83 (mutable)


State 39

   93 constant: NUM .

    $default  reduce using rule 93 (constant)


State 40

   46 iterationst: WHILE . '(' simpleexpression ')' statement

    '('  shift, and go to state 80


State 41

   94 constant: CHARCONST .

    $default  reduce using rule 94 (constant)


State 42

   47 returnst: RETURN . ';'
   48         | RETURN . expression ';'

    ID         shift, and go to state 38
    NUM        shift, and go to state 39
    CHARCONST  shift, and go to state 41
    STRING     shift, and go to state 45
    '-'        shift, and go to state 47
    '*'        shift, and go to state 48
    '('        shift, and go to state 49
    ';'        shift, and go to state 81
    '!'        shift, and go to state 51
    '?'        shift, and go to state 52

    ';'       [reduce using rule 58 (unaryrelexpression)]
    $default  reduce using rule 58 (unaryrelexpression)

    expression          go to state 82
    simpleexpression    go to state 61
    andexpression       go to state 62
    unaryrelexpression  go to state 63
    relexpression       go to state 64
    sumexpression       go to state 65
    term                go to state 66
    unaryexpression     go to state 67
    unaryop             go to state 68
    factor              go to state 69
    mutable             go to state 70
    immutable           go to state 71
    call                go to state 72
    constant            go to state 73


State 43

   44 selectionst: IF . '(' simpleexpression ')' statement
   45            | IF . '(' simpleexpression ')' statement ELSE statement

    '('  shift, and go to state 83


State 44

   49 breakst: STATEKW . ';'

    ';'  shift, and go to state 84


State 45

   95 constant: STRING .

    $default  reduce using rule 95 (constant)


State 46

   37 compoundst: CO . localdeclarations statementlist CC

    $default  reduce using rule 39 (localdeclarations)

    localdeclarations  go to state 85


State 47

   78 unaryop: '-' .

    $default  reduce using rule 78 (unaryop)


State 48

   79 unaryop: '*' .

    $default  reduce using rule 79 (unaryop)


State 49

   86 immutable: '(' . expression ')'

    ID         shift, and go to state 38
    NUM        shift, and go to state 39
    CHARCONST  shift, and go to state 41
    STRING     shift, and go to state 45
    '-'        shift, and go to state 47
    '*'        shift, and go to state 48
    '('        shift, and go to state 49
    '!'        shift, and go to state 51
    '?'        shift, and go to state 52

    $default  reduce using rule 58 (unaryrelexpression)

    expression          go to state 86
    simpleexpression    go to state 61
    andexpression       go to state 62
    unaryrelexpression  go to state 63
    relexpression       go to state 64
    sumexpression       go to state 65
    term                go to state 66
    unaryexpression     go to state 67
    unaryop             go to state 68
    factor              go to state 69
    mutable             go to state 70
    immutable           go to state 71
    call                go to state 72
    constant            go to state 73


State 50

   43 expressionst: ';' .

    $default  reduce using rule 43 (expressionst)


State 51

   57 unaryrelexpression: '!' . unaryrelexpression

    ID         shift, and go to state 38
    NUM        shift, and go to state 39
    CHARCONST  shift, and go to state 41
    STRING     shift, and go to state 45
    '-'        shift, and go to state 47
    '*'        shift, and go to state 48
    '('        shift, and go to state 49
    '!'        shift, and go to state 51
    '?'        shift, and go to state 52

    $default  reduce using rule 58 (unaryrelexpression)

    unaryrelexpression  go to state 87
    relexpression       go to state 64
    sumexpression       go to state 65
    term                go to state 66
    unaryexpression     go to state 67
    unaryop             go to state 68
    factor              go to state 69
    mutable             go to state 88
    immutable           go to state 71
    call                go to state 72
    constant            go to state 73


State 52

   80 unaryop: '?' .

    $default  reduce using rule 80 (unaryop)


State 53

   21 fundeclaration: ID '(' params ')' statement .

    $default  reduce using rule 21 (fundeclaration)


State 54

   32 statement: compoundst .

    $default  reduce using rule 32 (statement)


State 55

   31 statement: expressionst .

    $default  reduce using rule 31 (statement)


State 56

   33 statement: selectionst .

    $default  reduce using rule 33 (statement)


State 57

   34 statement: iterationst .

    $default  reduce using rule 34 (statement)


State 58

   35 statement: returnst .

    $default  reduce using rule 35 (statement)


State 59

   36 statement: breakst .

    $default  reduce using rule 36 (statement)


State 60

   42 expressionst: expression . ';'

    ';'  shift, and go to state 89


State 61

   52 expression: simpleexpression .
   53 simpleexpression: simpleexpression . OR andexpression

    OR  shift, and go to state 90

    $default  reduce using rule 52 (expression)


State 62

   54 simpleexpression: andexpression .
   55 andexpression: andexpression . AND unaryrelexpression

    AND  shift, and go to state 91

    $default  reduce using rule 54 (simpleexpression)


State 63

   56 andexpression: unaryrelexpression .

    $default  reduce using rule 56 (andexpression)


State 64

   59 unaryrelexpression: relexpression .

    $default  reduce using rule 59 (unaryrelexpression)


State 65

   60 relexpression: sumexpression . relop sumexpression
   61              | sumexpression .
   67 sumexpression: sumexpression . sumop term

    '+'  shift, and go to state 92
    '-'  shift, and go to state 93
    '='  shift, and go to state 94
    '!'  shift, and go to state 95
    '<'  shift, and go to state 96
    '>'  shift, and go to state 97

    $default  reduce using rule 61 (relexpression)

    relop  go to state 98
    sumop  go to state 99


State 66

   68 sumexpression: term .
   71 term: term . mulop unaryexpression

    '*'  shift, and go to state 100
    '/'  shift, and go to state 101
    '%'  shift, and go to state 102

    $default  reduce using rule 68 (sumexpression)

    mulop  go to state 103


State 67

   72 term: unaryexpression .

    $default  reduce using rule 72 (term)


State 68

   76 unaryexpression: unaryop . unaryexpression

    ID         shift, and go to state 38
    NUM        shift, and go to state 39
    CHARCONST  shift, and go to state 41
    STRING     shift, and go to state 45
    '-'        shift, and go to state 47
    '*'        shift, and go to state 48
    '('        shift, and go to state 49
    '?'        shift, and go to state 52

    unaryexpression  go to state 104
    unaryop          go to state 68
    factor           go to state 69
    mutable          go to state 88
    immutable        go to state 71
    call             go to state 72
    constant         go to state 73


State 69

   77 unaryexpression: factor .

    $default  reduce using rule 77 (unaryexpression)


State 70

   50 expression: mutable . '=' expression
   51           | mutable . UNARYOP
   81 factor: mutable .
   84 mutable: mutable . '[' expression ']'
   85        | mutable . '.' ID

    UNARYOP  shift, and go to state 105
    '['      shift, and go to state 106
    '='      shift, and go to state 107
    '.'      shift, and go to state 108

    '='       [reduce using rule 81 (factor)]
    $default  reduce using rule 81 (factor)


State 71

   82 factor: immutable .

    $default  reduce using rule 82 (factor)


State 72

   87 immutable: call .

    $default  reduce using rule 87 (immutable)


State 73

   88 immutable: constant .

    $default  reduce using rule 88 (immutable)


State 74

   24 paramlist: paramlist ';' paramtypelist .

    $default  reduce using rule 24 (paramlist)


State 75

   13 vardecid: ID '[' NUM ']' .

    $default  reduce using rule 13 (vardecid)


State 76

   20 fundeclaration: typespecifier ID '(' params ')' . statement

    ID         shift, and go to state 38
    NUM        shift, and go to state 39
    WHILE      shift, and go to state 40
    CHARCONST  shift, and go to state 41
    RETURN     shift, and go to state 42
    IF         shift, and go to state 43
    STATEKW    shift, and go to state 44
    STRING     shift, and go to state 45
    CO         shift, and go to state 46
    '-'        shift, and go to state 47
    '*'        shift, and go to state 48
    '('        shift, and go to state 49
    ';'        shift, and go to state 50
    '!'        shift, and go to state 51
    '?'        shift, and go to state 52

    ';'       [reduce using rule 58 (unaryrelexpression)]
    $default  reduce using rule 58 (unaryrelexpression)

    statement           go to state 109
    compoundst          go to state 54
    expressionst        go to state 55
    selectionst         go to state 56
    iterationst         go to state 57
    returnst            go to state 58
    breakst             go to state 59
    expression          go to state 60
    simpleexpression    go to state 61
    andexpression       go to state 62
    unaryrelexpression  go to state 63
    relexpression       go to state 64
    sumexpression       go to state 65
    term                go to state 66
    unaryexpression     go to state 67
    unaryop             go to state 68
    factor              go to state 69
    mutable             go to state 70
    immutable           go to state 71
    call                go to state 72
    constant            go to state 73


State 77

   30 paramid: ID '[' ']' .

    $default  reduce using rule 30 (paramid)


State 78

   27 paramidlist: paramidlist ',' paramid .

    $default  reduce using rule 27 (paramidlist)


State 79

   89 call: ID '(' . args ')'

    ID         shift, and go to state 38
    NUM        shift, and go to state 39
    CHARCONST  shift, and go to state 41
    STRING     shift, and go to state 45
    '-'        shift, and go to state 47
    '*'        shift, and go to state 48
    '('        shift, and go to state 49
    '!'        shift, and go to state 51
    '?'        shift, and go to state 52

    $default  reduce using rule 58 (unaryrelexpression)

    expression          go to state 110
    simpleexpression    go to state 61
    andexpression       go to state 62
    unaryrelexpression  go to state 63
    relexpression       go to state 64
    sumexpression       go to state 65
    term                go to state 66
    unaryexpression     go to state 67
    unaryop             go to state 68
    factor              go to state 69
    mutable             go to state 70
    immutable           go to state 71
    call                go to state 72
    args                go to state 111
    arglist             go to state 112
    constant            go to state 73


State 80

   46 iterationst: WHILE '(' . simpleexpression ')' statement

    ID         shift, and go to state 38
    NUM        shift, and go to state 39
    CHARCONST  shift, and go to state 41
    STRING     shift, and go to state 45
    '-'        shift, and go to state 47
    '*'        shift, and go to state 48
    '('        shift, and go to state 49
    '!'        shift, and go to state 51
    '?'        shift, and go to state 52

    $default  reduce using rule 58 (unaryrelexpression)

    simpleexpression    go to state 113
    andexpression       go to state 62
    unaryrelexpression  go to state 63
    relexpression       go to state 64
    sumexpression       go to state 65
    term                go to state 66
    unaryexpression     go to state 67
    unaryop             go to state 68
    factor              go to state 69
    mutable             go to state 88
    immutable           go to state 71
    call                go to state 72
    constant            go to state 73


State 81

   47 returnst: RETURN ';' .

    $default  reduce using rule 47 (returnst)


State 82
